lazyloading image fix

--- a/integration.html
+++ b/integration.html
@@ -486,8 +486,8 @@
             <!-- media item (right) -->
             <figure class="media-item circle-mask mask-outside float-r lazyload">
               <picture>
-                <source media="(min-width: 40em)" srcset="images/content/img-content-integration-apps-1x1.jpg" class="lazyload" alt="A mobile phone with illustrated application icons flying out of the screen.">
-                <img src="images/content/img-content-integration-apps-wide.jpg" data-src="images/content/img-content-integration-apps-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+                <source media="(min-width: 40em)" data-srcset="images/content/img-content-integration-apps-1x1.jpg" class="lazyload" alt="A mobile phone with illustrated application icons flying out of the screen.">
+                <img data-src="images/content/img-content-integration-apps-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
                   <img src="images/content/img-content-integration-apps-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
