added Open Graph meta data

--- a/MASTER.html
+++ b/MASTER.html
@@ -11,6 +11,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Concordus Applications">
   <meta name="author" content="Concordus Applications">
+  <meta property="og:title" content="Page Title Goes Here" />
+  <meta property="og:description" content="Open Graph description for goes here." />
+  <meta property="og:image" content="https://concordusapps.com/images/og/img-og-filename.png" />
   <meta name="msapplication-TileColor" content="#333333">
   <meta name="msapplication-TileImage" content="images/icons/favicon-144.jpg">
   <!--[if IEMobile]><meta http-equiv="cleartype" content="on" /><![endif]-->
