removing headroom.js from index.html

--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
   </script>
 
   <!-- headroom (if you like that sort of thing) -->
-  <script>
+  <!--<script>
     // Media Queries
       var mq = window.matchMedia('(min-width: 48em)');
       if(mq.matches) {
@@ -811,7 +811,7 @@
       else {  
         headroom.destroy();
       }
-  </script>
+  </script>-->
 
 </body>
 </html>
