--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
       </section>
 
       <!-- CTA banner -->
-      <section id="page-start" class="banner banner-full">
+      <section class="banner banner-full">
         <div class="container">
           <!-- banner -->
           <div class="card card-row card-clean">
@@ -797,7 +797,7 @@
   </script>
 
   <!-- headroom (if you like that sort of thing) -->
-  <!--<script>
+  <script>
     // Media Queries
       var mq = window.matchMedia('(min-width: 48em)');
       if(mq.matches) {
@@ -811,7 +811,7 @@
       else {  
         headroom.destroy();
       }
-  </script>-->
+  </script>
 
 </body>
 </html>
