added "skip to main" link

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 
 <body>
   
+  <!-- skip to Main link -->
+  <a class="skip-link" href="#main">skip to main content</a>
+
+  <!-- UI critical icons -->
   <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
   
     <symbol id="icon-menu" viewBox="0 0 32 32" aria-labelledby="icon-menu-title icon-menu-desc">
