--- a/advanced-testing.html
+++ b/advanced-testing.html
@@ -686,7 +686,7 @@
               <!-- media item -->
               <figure class="media-item lazyload">
                 <picture>            
-                  <img src="images/content/img-content-bigdata-analysis-03-wide.jpg" data-src="images/content/img-content-bigdata-analysis-03-wide.jpg" class="lazyload" alt="Illustration of testing data process.">
+                  <img data-src="images/content/img-content-bigdata-analysis-03-wide.jpg" data-src="images/content/img-content-bigdata-analysis-03-wide.jpg" class="lazyload" alt="Illustration of testing data process.">
                   <noscript>
                     <img src="images/content/img-content-bigdata-analysis-03-wide.jpg" alt="Illustration of testing data process.">
                   </noscript>
