--- a/advanced-testing.html
+++ b/advanced-testing.html
@@ -8,8 +8,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Concordus Applications">
-  <meta name="author" content="Concordus Applications">
+  <meta name="description" content="MaxCentive">
+  <meta name="author" content="MaxCentive">
   <meta property="og:title" content="Page Title Goes Here" />
   <meta property="og:description" content="Open Graph description for goes here." />
   <meta property="og:image" content="https://concordusapps.com/images/og/img-og-filename.png" />
@@ -18,7 +18,7 @@
   <!--[if IEMobile]><meta http-equiv="cleartype" content="on" /><![endif]-->
   <link rel="apple-touch-icon" href="images/icons/favicon-180.jpg">
   <link rel="shortcut icon" href="/favicon.ico">
-  <title>Concordus Applications | Advanced Testing</title>
+  <title>MaxCentive | Advanced Testing</title>
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom styles -->
@@ -505,7 +505,7 @@
             
           <p class="lead">Software testing costs are anywhere between 25 to 40% of the total budget while delivering a digital transformation project. And these costs are likely to go up with the increasing innovation in the mobile and the wearable devices.</p>
 
-          <p>Concordus Applications helps companies rethink and reinvent their test approach by reducing risk and costs while delivering continuous quality efficiently. We help our clients to avoid unnecessary test costs by designing and managing the end-to-end Testing process and keep the focus on delivering the best value.</p>
+          <p>MaxCentive helps companies rethink and reinvent their test approach by reducing risk and costs while delivering continuous quality efficiently. We help our clients to avoid unnecessary test costs by designing and managing the end-to-end Testing process and keep the focus on delivering the best value.</p>
 
           <p>We have proven capability in Website and Mobile test automation framework along with vast capabilities in different testing e.g. functional &amp; non-functional testing.</p>
 
@@ -654,7 +654,7 @@
               <!-- copy -->
               <div class="card-block">
                 <h4 class="card-title">Digital Testing</h4>
-                <p class="card-text">Concordus Applications has proven capabilities in many types of testing. Concordus Applications helps companies rethink and reinvent their testing approach by reducing risk and costs while delivering continuous quality efficiently.</p>
+                <p class="card-text">MaxCentive has proven capabilities in many types of testing. MaxCentive helps companies rethink and reinvent their testing approach by reducing risk and costs while delivering continuous quality efficiently.</p>
                 <p>We manage the end-to-end Testing process and keep the focus on delivering the best value.</p>
                 <!--<a href="#" class="btn btn-round btn-primary">Read More</a>-->
               </div>
@@ -731,7 +731,7 @@
         <!-- logo & search -->
         <section class="flex flex-wrap ai-center jc-between">
           <a class="logo" href="#main">
-            <img src="images/concordus-logo-white-h.svg" alt="Concordus Applications logo">
+            <img src="images/concordus-logo-white-h.svg" alt="MaxCentive logo">
           </a>
           <div class="search" role="search">
             <form id="footer-search" class="form-trans flex jc-between">
@@ -810,7 +810,7 @@
               <a href="#0"><svg class="icon"><use xlink:href="#icon-twitter-circle" /></svg></a>
               <a href="#0"><svg class="icon"><use xlink:href="#icon-linkedin-circle" /></svg></a>
             </div>
-            <p class="mb-0 text-sm">&copy; 2017 Concordus Applications. All rights reserved.</p>
+            <p class="mb-0 text-sm">&copy; 2017 MaxCentive. All rights reserved.</p>
           </div>
         </section>
       </div>
