--- a/product-technologies.html
+++ b/product-technologies.html
@@ -8,8 +8,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Concordus Applications">
-  <meta name="author" content="Concordus Applications">
+  <meta name="description" content="MaxCentive">
+  <meta name="author" content="MaxCentive">
   <meta property="og:title" content="Page Title Goes Here" />
   <meta property="og:description" content="Open Graph description for goes here." />
   <meta property="og:image" content="https://concordusapps.com/images/og/img-og-filename.png" />
@@ -18,7 +18,7 @@
   <!--[if IEMobile]><meta http-equiv="cleartype" content="on" /><![endif]-->
   <link rel="apple-touch-icon" href="images/icons/favicon-180.jpg">
   <link rel="shortcut icon" href="/favicon.ico">
-  <title>Concordus Applications | Products &amp; Technologies</title>
+  <title>MaxCentive | Products &amp; Technologies</title>
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom styles -->
@@ -505,7 +505,7 @@
             <!-- Page Title -->
             <h1 id="products-and-technologies" class="display-4">Products &amp; Technologies</h1>
             
-            <p class="lead">Concordus Applications is a Systems Integrator that is focused on building a connected world by offering innovative, smart and cost-effective solutions. Our products aim to automate the business processes used for various Users in industries like the Communications Channel, Retail, Health care etc. We offer end-to-end services for software design, build, maintenance and support and we work across technology domains, platforms, infrastructure and tools.</p>
+            <p class="lead">MaxCentive is a Systems Integrator that is focused on building a connected world by offering innovative, smart and cost-effective solutions. Our products aim to automate the business processes used for various Users in industries like the Communications Channel, Retail, Health care etc. We offer end-to-end services for software design, build, maintenance and support and we work across technology domains, platforms, infrastructure and tools.</p>
 
             <h2 id="integration-designs" class="pt-1">Integration Designs</h2>
 
@@ -591,7 +591,7 @@
         <!-- logo & search -->
         <section class="flex flex-wrap ai-center jc-between">
           <a class="logo" href="#main">
-            <img src="images/concordus-logo-white-h.svg" alt="Concordus Applications logo">
+            <img src="images/concordus-logo-white-h.svg" alt="MaxCentive logo">
           </a>
           <div class="search" role="search">
             <form id="footer-search" class="form-trans flex jc-between">
@@ -670,7 +670,7 @@
               <a href="#0"><svg class="icon"><use xlink:href="#icon-twitter-circle" /></svg></a>
               <a href="#0"><svg class="icon"><use xlink:href="#icon-linkedin-circle" /></svg></a>
             </div>
-            <p class="mb-0 text-sm">&copy; 2017 Concordus Applications. All rights reserved.</p>
+            <p class="mb-0 text-sm">&copy; 2017 MaxCentive. All rights reserved.</p>
           </div>
         </section>
       </div>
