--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Concordus Applications">
-  <meta name="author" content="Concordus Applications">
+  <meta name="description" content="MaxCentive">
+  <meta name="author" content="MaxCentive">
   <meta property="og:title" content="Page Title Goes Here" />
   <meta property="og:description" content="Open Graph description for goes here." />
   <meta property="og:image" content="https://concordusapps.com/images/og/img-og-filename.png" />
@@ -19,7 +19,7 @@
   <!--[if IEMobile]><meta http-equiv="cleartype" content="on" /><![endif]-->
   <link rel="apple-touch-icon" href="images/icons/favicon-180.jpg">
   <link rel="shortcut icon" href="/favicon.ico">
-  <title>Concordus Applications | Contact Us</title>
+  <title>MaxCentive | Contact Us</title>
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom styles -->
@@ -530,7 +530,7 @@
                 </div>
               </div>
               <div class="col-md-12 mb-4">
-                <p class="mr-ml-a mb-0 mw-48em align-center">Concordus Applications is a Systems Integrator that is focused on building a connected world by offering innovative, smart and cost-effective solutions. Our products aim to automate the business processes used for various Users in industries like the Communications Channel, Retail, Health care etc. We offer end-to-end services for software design, build, maintenance and support and we work across technology domains, platforms, infrastructure and tools.</p>
+                <p class="mr-ml-a mb-0 mw-48em align-center">MaxCentive is a Systems Integrator that is focused on building a connected world by offering innovative, smart and cost-effective solutions. Our products aim to automate the business processes used for various Users in industries like the Communications Channel, Retail, Health care etc. We offer end-to-end services for software design, build, maintenance and support and we work across technology domains, platforms, infrastructure and tools.</p>
               </div>
               <div class="col-md-12">
                 <div class="align-center">
@@ -550,7 +550,7 @@
         <!-- logo & search -->
         <section class="flex flex-wrap ai-center jc-between">
           <a class="logo" href="#main">
-            <img src="images/concordus-logo-white-h.svg" alt="Concordus Applications logo">
+            <img src="images/concordus-logo-white-h.svg" alt="MaxCentive logo">
           </a>
           <div class="search" role="search">
             <form id="footer-search" class="form-trans flex jc-between">
@@ -629,7 +629,7 @@
               <a href="#0"><svg class="icon"><use xlink:href="#icon-twitter-circle" /></svg></a>
               <a href="#0"><svg class="icon"><use xlink:href="#icon-linkedin-circle" /></svg></a>
             </div>
-            <p class="mb-0 text-sm">&copy; 2017 Concordus Applications. All rights reserved.</p>
+            <p class="mb-0 text-sm">&copy; 2017 MaxCentive. All rights reserved.</p>
           </div>
         </section>
       </div>
