--- a/enterprise-mobile-crm.html
+++ b/enterprise-mobile-crm.html
@@ -8,8 +8,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Concordus Applications">
-  <meta name="author" content="Concordus Applications">
+  <meta name="description" content="MaxCentive">
+  <meta name="author" content="MaxCentive">
   <meta property="og:title" content="Page Title Goes Here" />
   <meta property="og:description" content="Open Graph description for goes here." />
   <meta property="og:image" content="https://concordusapps.com/images/og/img-og-filename.png" />
@@ -18,7 +18,7 @@
   <!--[if IEMobile]><meta http-equiv="cleartype" content="on" /><![endif]-->
   <link rel="apple-touch-icon" href="images/icons/favicon-180.jpg">
   <link rel="shortcut icon" href="/favicon.ico">
-  <title>Concordus Applications | Enterprise Mobile Crm</title>
+  <title>MaxCentive | Enterprise Mobile Crm</title>
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom styles -->
@@ -531,10 +531,10 @@
             <!-- media item (full) -->
             <figure class="media-item pb-2 w-100 lazyload">
               <picture>
-                <source media="(min-width: 40em)" srcset="images/content/img-content-app-01-wide-LG.png" class="lazyload" alt="Examples of Concordus Applications CRM interface.">
-                <img src="images/content/img-content-app-01-wide-LG.png" data-src="images/content/img-content-app-01-wide-LG.png" class="lazyload" alt="Examples of Concordus Applications CRM interface.">
+                <source media="(min-width: 40em)" srcset="images/content/img-content-app-01-wide-LG.png" class="lazyload" alt="Examples of MaxCentive CRM interface.">
+                <img src="images/content/img-content-app-01-wide-LG.png" data-src="images/content/img-content-app-01-wide-LG.png" class="lazyload" alt="Examples of MaxCentive CRM interface.">
                 <noscript>
-                  <img src="images/content/img-content-app-01-wide-LG.png" alt="Examples of Concordus Applications CRM interface.">
+                  <img src="images/content/img-content-app-01-wide-LG.png" alt="Examples of MaxCentive CRM interface.">
                 </noscript>
               </picture>
             </figure>
@@ -624,7 +624,7 @@
         <!-- logo & search -->
         <section class="flex flex-wrap ai-center jc-between">
           <a class="logo" href="#main">
-            <img src="images/concordus-logo-white-h.svg" alt="Concordus Applications logo">
+            <img src="images/concordus-logo-white-h.svg" alt="MaxCentive logo">
           </a>
           <div class="search" role="search">
             <form id="footer-search" class="form-trans flex jc-between">
@@ -703,7 +703,7 @@
               <a href="#0"><svg class="icon"><use xlink:href="#icon-twitter-circle" /></svg></a>
               <a href="#0"><svg class="icon"><use xlink:href="#icon-linkedin-circle" /></svg></a>
             </div>
-            <p class="mb-0 text-sm">&copy; 2017 Concordus Applications. All rights reserved.</p>
+            <p class="mb-0 text-sm">&copy; 2017 MaxCentive. All rights reserved.</p>
           </div>
         </section>
       </div>
