removed Concordus reference

--- a/integration.html
+++ b/integration.html
@@ -12,7 +12,7 @@
   <meta name="author" content="MaxCentive">
   <meta property="og:title" content="Page Title Goes Here" />
   <meta property="og:description" content="Open Graph description for goes here." />
-  <meta property="og:image" content="https://concordusapps.com/images/og/img-og-filename.png" />
+  <meta property="og:image" content="https://maxcentive.com/images/og/img-og-filename.png" />
   <meta name="msapplication-TileColor" content="#333333">
   <meta name="msapplication-TileImage" content="images/icons/favicon-144.jpg">
   <!--[if IEMobile]><meta http-equiv="cleartype" content="on" /><![endif]-->
@@ -642,7 +642,7 @@
             <h4 class="text-md">Contact Us</h4>
             <div class="contact-nav text-sm">
               <a href="tel:8005557654">800.555.7654</a>
-              <a href="mailto:contact@maxcentive.com">contact@concordusapps.com</a>
+              <a href="mailto:contact@maxcentive.com">contact@maxcentive.com</a>
             </div>
           </div>
           <div class="footer-copyright">
