main-menu layout styles

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
           <!-- Main Menu -->
           <div class="collapse navbar-collapse" id="main-menu">
             <!-- main nav -->
-            <ul class="navbar-nav ml-a">
+            <ul class="navbar-nav">
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="products.html" id="products-dropdown" data-toggle="dropdown" aria-haspopup="true"
                   aria-expanded="false">Products</a>
@@ -475,12 +475,12 @@
             <!-- login nav -->
             <ul class="navbar-nav login-nav">
               <li class="nav-item">
-                <a class="nav-link" href="sign-up.html">Sign Up</a>
+                <a class="nav-link login-link" href="login.html">Login</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="login.html">Login</a>
-              </li>
-              <li class="nav-item flex ai-center">
+                <a class="nav-link signup-link" href="sign-up.html">Sign Up</a>
+              </li>              
+              <li class="nav-item search-button">
                 <button class="btn btn-text ca-white-c" data-toggle="modal" data-target="#search-modal"><svg class="icon"><use xlink:href="#icon-search" /></svg></button>
               </li>
             </ul>
