--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
     <footer class="site-footer" role="contentinfo">
       <div class="container">
         <!-- logo & search -->
-        <section class="flex flex-wrap ai-center jc-between">
+        <section class="footer-logo">
           <!-- logo -->
           <a class="site-logo" href="#main"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 494.32 52.81" class="logo logo-light"><defs><style>.b{fill:#39b54a;}.c{fill:#93278f;}.d{fill:#29abe2;}.e{fill:#f15a24;}</style></defs><title>MaxCentive - Commission, Payment, Loyalty</title><path class="fill" d="M55.5,5.24V48.76c0,2.21-2.4,4.06-5.16,4.06S45.27,51,45.27,48.76v-31L32,32.46a5.51,5.51,0,0,1-4.15,1.7h-.18a5.72,5.72,0,0,1-4.24-1.7L10.23,17.71v31c0,2.21-2.3,4.06-5.16,4.06S0,51,0,48.76V5.24C0,3,2.3,1.19,5.07,1.19h.28A5.45,5.45,0,0,1,9.4,2.88L27.75,23.24,46.09,2.88a5.51,5.51,0,0,1,4.15-1.7h.09C53.1,1.26,55.5,3,55.5,5.24Z"/><path class="fill m" d="M101.88,40.64H79.48L75,50.23a5.32,5.32,0,0,1-4.79,2.58,6.6,6.6,0,0,1-1.75-.22c-2.67-.81-4-3.17-3-5.31L85.75,3.84a5.32,5.32,0,0,1,4.89-2.58,5.22,5.22,0,0,1,4.89,2.58l20.37,43.44c.92,2.14-.37,4.5-3,5.31a6.13,6.13,0,0,1-1.75.22,5.07,5.07,0,0,1-4.7-2.58ZM98.1,32.53,90.64,16.68,83.17,32.53Z"/><path class="fill a" d="M183.36,27.15C183.43,13,195.26,1.56,209.52,1.48A26.67,26.67,0,0,1,226,7a4.22,4.22,0,0,1,.71,5.7,4.18,4.18,0,0,1-5.7.78,17.77,17.77,0,0,0-11.48-3.92,18.87,18.87,0,0,0-12.83,5.13,17.59,17.59,0,0,0-5.2,12.4,17.33,17.33,0,0,0,5.2,12.4,18.87,18.87,0,0,0,12.83,5.13A17.91,17.91,0,0,0,221,40.76a4.32,4.32,0,0,1,5.7.78,4.21,4.21,0,0,1-.71,5.7,26.67,26.67,0,0,1-16.47,5.56A26.08,26.08,0,0,1,183.36,27.15Z"/><path class="fill" d="M239.24,48.89V6.83a3.87,3.87,0,0,1,3.92-3.92h23.31a4,4,0,0,1,3.92,3.92,4,4,0,0,1-3.92,4H247.15v13h16.61a4,4,0,0,1,0,7.91H247.15V44.9h19.32a4,4,0,0,1,0,7.91h-23.1c-.14,0-.14-.07-.14-.07l-.07.07A3.91,3.91,0,0,1,239.24,48.89Z"/><path class="fill" d="M293.08,48.89a3.89,3.89,0,1,1-7.77,0V7.4a3.86,3.86,0,0,1,1.57-3.28A3.93,3.93,0,0,1,292.3,5l23,31.87V7.47a3.88,3.88,0,0,1,3.85-3.85,3.94,3.94,0,0,1,3.92,3.85V48.89a4,4,0,0,1-3.92,3.92,3.87,3.87,0,0,1-2.92-1.43,1.89,1.89,0,0,1-.36-.43L293.08,19.31Z"/><path class="fill" d="M368.81,10.82H357.47V48.89a3.87,3.87,0,0,1-3.92,3.92,3.91,3.91,0,0,1-3.92-3.92V10.82H338.36a4,4,0,0,1-3.92-4,3.87,3.87,0,0,1,3.92-3.92h30.44a3.91,3.91,0,0,1,3.92,3.92A4,4,0,0,1,368.81,10.82Z"/><path class="fill" d="M386,6.83a3.87,3.87,0,0,1,3.92-3.92,4,4,0,0,1,4,3.92V48.89a4,4,0,0,1-4,3.92A3.87,3.87,0,0,1,386,48.89Z"/><path class="fill" d="M427.06,52.1a3,3,0,0,0-.5-.36c0-.07-.07-.07-.07-.21a1.89,1.89,0,0,1-.36-.43.07.07,0,0,1-.07-.07,2.5,2.5,0,0,0-.36-.57L408.24,8.83a3.8,3.8,0,0,1,2.14-5.06,3.84,3.84,0,0,1,5.06,2.07l13.9,33,13.9-33a3.93,3.93,0,0,1,7.27,3L432.9,50.46a2.13,2.13,0,0,1-.29.57c0,.07,0,.07-.07.07s-.29.29-.36.43a.55.55,0,0,1-.14.21c-.14.14-.29.21-.43.36l-.14.07a4,4,0,0,1-.57.36c-.07,0-.07,0-.14.07a1.68,1.68,0,0,0-.57.14h-.14a2.67,2.67,0,0,1-.71.07,2.43,2.43,0,0,1-.71-.07h-.14a1.68,1.68,0,0,0-.57-.14.07.07,0,0,0-.07-.07h-.07c-.14-.07-.43-.29-.64-.43Z"/><path class="fill" d="M463.16,48.89V6.83a3.87,3.87,0,0,1,3.92-3.92H490.4a4,4,0,0,1,3.92,3.92,4,4,0,0,1-3.92,4H471.08v13h16.61a4,4,0,0,1,0,7.91H471.08V44.9H490.4a4,4,0,0,1,0,7.91H467.3c-.14,0-.14-.07-.14-.07l-.07.07A3.91,3.91,0,0,1,463.16,48.89Z"/><path class="b" d="M141.45,24.4h6.91V17.25L133.3,1.6a4.7,4.7,0,0,0-7-.1,4.93,4.93,0,0,0-.19,7Z"/><path class="c" d="M152.29,24.4h6.91L174.52,8.49a4.93,4.93,0,0,0-.19-7,4.7,4.7,0,0,0-7,.1L152.29,17.25Z"/><path class="d" d="M148.36,28h-6.43L126.17,44.39a4.93,4.93,0,0,0,.1,7,5.1,5.1,0,0,0,2.73,1.4,5.2,5.2,0,0,0,4.33-1.49l15-15.61Z"/><path class="e" d="M174.49,44.39,158.73,28h-6.43v7.65l15,15.61a5.2,5.2,0,0,0,4.33,1.49,5.1,5.1,0,0,0,2.73-1.4A4.93,4.93,0,0,0,174.49,44.39Z"/></svg></a>
           <div class="search" role="search">
@@ -627,10 +627,10 @@
           <nav class="nav-list" aria-labelledby="maxcentive-products">
             <h3 id="maxcentive-products" class="nav-title">Products</h3>
             <ul>
-              <li><a href="about.html">Commissions</a></li>
-              <li><a href="payments.html">Payments</a></li>
-              <li><a href="loyalty.html">Loyalty</a></li>
-              <li><a href="pricing.html">Pricing</a></li>
+              <li><a href="about.html">MaxCommissions <span class="text-md">&reg;</span></a></li>
+              <li><a href="payments.html">MaxPayments <span class="text-md">&reg;</span></a></li>
+              <li><a href="loyalty.html">MaxLoyalty <span class="text-md">&reg;</span></a></li>
+              <li><a href="pricing.html">Pricing Calculator</a></li>
             </ul>
           </nav>          
           <!-- nav list -->
